--- a/5-structure-4.ipynb
+++ b/5-structure-4.ipynb
@@ -47,11 +47,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "primes = [2,3,5,7]\n",
+    "for prim in primes:\n",
+    "    print(prim)\n",
+    "    "
    ]
   },
   {
@@ -86,11 +100,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "list(range(6))"
    ]
   },
   {
@@ -104,29 +129,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "list(range(2,6))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "list(range(2,6,1\n",
+    "        ))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 5, 8]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "list(range(2,10,3))"
    ]
   },
   {
@@ -138,11 +197,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "s\n",
+      "d\n",
+      "a\n",
+      "s\n",
+      "f\n",
+      "a\n",
+      "s\n",
+      "g\n",
+      "g\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "s = 'asdasfasgg'\n",
+    "for c in s:\n",
+    " print(c)"
    ]
   },
   {
@@ -168,11 +246,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "Loop end.\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "count = 0\n",
+    "while count < 6:\n",
+    "    print (count)\n",
+    "    count += 1\n",
+    "    \n",
+    "print('Loop end.')"
    ]
   },
   {
@@ -211,11 +308,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "for x in range(10):\n",
+    "    if x % 2 == 0:\n",
+    "        continue        \n",
+    "    print(x)"
    ]
   },
   {
@@ -227,11 +339,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 is even\n",
+      "4 is even\n",
+      "3 is odd\n",
+      "2 is even\n",
+      "1 is odd\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "from random import randrange\n",
+    "\n",
+    "while True:\n",
+    "    n = randrange(-2,5)\n",
+    "    if n < 0:\n",
+    "        break\n",
+    "    elif n % 2 == 0:\n",
+    "        print(n,'is even')\n",
+    "    else:\n",
+    "        print(n,'is odd')"
    ]
   },
   {
