--- a/6-structure-5.ipynb
+++ b/6-structure-5.ipynb
@@ -78,11 +78,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please enter a number: a\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not a vaild number. Try again...\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please enter a number: 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your number is  1\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "while True:\n",
+    "    try:\n",
+    "        x = int(input('Please enter a number:'))\n",
+    "        break\n",
+    "    except ValueError:\n",
+    "        print('Not a vaild number. Try again...')\n",
+    "        \n",
+    "print ('Your number is ', x)"
    ]
   },
   {
@@ -96,11 +132,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Handling run-time error: division by zero\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "type(0)\n",
+    "\n",
+    "def this_fails():\n",
+    "   x = 1/0\n",
+    "    \n",
+    "try:\n",
+    "    this_fails()\n",
+    "except ZeroDivisionError as err:\n",
+    "    print('Handling run-time error:', err)\n",
+    "    type(err)\n",
+    "    "
    ]
   },
   {
