--- a/p2-1-function-def.ipynb
+++ b/p2-1-function-def.ipynb
@@ -32,11 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "def do_nothing():\n",
+    "    pass\n",
+    "\n",
+    "do_nothing()"
    ]
   },
   {
@@ -60,11 +63,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "import keyword\n",
+    "type(keyword.kwlist)"
    ]
   },
   {
@@ -103,11 +118,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Program exits. Bye.\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "def exit_info():\n",
+    "    print('Program exits. Bye.')\n",
+    "    \n",
+    "exit_info()"
    ]
   },
   {
@@ -126,11 +152,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2000\n",
+      "2004\n",
+      "2008\n",
+      "2012\n",
+      "2016\n",
+      "2020\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "def leap_years(begin, end):\n",
+    "    year = begin\n",
+    "    for year in range(begin, end + 1):\n",
+    "        if (year % 4 == 0 and year % 100 != 0) or year % 400 == 0:\n",
+    "            print(year)\n",
+    "            \n",
+    "leap_years(2000, 2020)"
    ]
   },
   {
@@ -160,11 +205,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "bool(None)"
    ]
   },
   {
@@ -185,11 +241,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 1\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "def idiv(a, b):\n",
+    "    qutotient = a // b\n",
+    "    remainder = a % b\n",
+    "    return qutotient, remainder\n",
+    "\n",
+    "q, r = idiv(10, 3)\n",
+    "print(q, r)"
    ]
   },
   {
@@ -215,11 +285,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "def increase_one(n):\n",
+    "    n += 1\n",
+    "    return n\n",
+    "\n",
+    "n = 1\n",
+    "print(increase_one(n))\n",
+    "print(n)"
    ]
   },
   {
@@ -276,29 +361,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "def greeting(name, msg='Hi'):\n",
+    "    print(f'{msg},{name}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi,Neo\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "greeting('Neo')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good morning,Neo\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "greeting('Neo','Good morning')"
    ]
   },
   {
@@ -326,11 +428,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "def greeting(name, msg='Hi', punc='!'):\n",
+    "    print(f'{msg}, {name}{punc}')"
    ]
   },
   {
@@ -342,11 +445,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, Neo.\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "greeting('Neo', punc='.')"
    ]
   },
   {
@@ -364,11 +475,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good moring, Neo.\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "greeting('Neo', punc='.', msg='Good moring')"
    ]
   },
   {
@@ -389,38 +508,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "def say_hi(*names):\n",
+    "    for name in names:\n",
+    "        print('Hi', name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi Neo\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "say_hi('Neo')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi Neo\n",
+      "Hi Trinity\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "say_hi('Neo', 'Trinity')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi ('Neo', 'Trinity', 'Morpheus')\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "names = ('Neo', 'Trinity', 'Morpheus')\n",
+    "say_hi(names)"
    ]
   },
   {
@@ -435,38 +582,32 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "在使用 *arbitrary argument* 的场合，有几点需要注意：\n",
-    "* 参数变量名最好用复数单词，一看就知道是一组数据；这个变量在函数里通常都会被 `for...in` 循环处理，用复数名词在写类似 `for name in names` 的循环语句时会很舒服、很地道（*idiotic*），是的，写程序和学外语一样，不写则已，写就要尽量写得“地道”；\n",
-    "* 这种参数变量只能有一个，因为从它开始后面的输入值都会被当做它的一部分，多了就不知道怎么分了，显然，如果有这种参数，必须放在参数表的最后。\n",
-    "\n",
-    "上面的第二点，有一个不太常见的例外，那就是一个函数既有 *arbitrary arguments* 又有 *arguments with default values* 的情况，那么可以有两个 *arbitrary arguments*，其中第二个必须带缺省值，然后参数表排列成这样：\n",
-    "\n",
-    "`def monstrosity(*normal arguments*, *normal arbitrary argument*, *arguments with defaults*, *arbitrary argument with default*)`\n",
-    "\n",
-    "这样是完全符合语法要求的，调用时传入参数值还是按照前面讲的规则，先按照位置顺序匹配前两部分，多出来的都归 *normal arbitrary argument*；然后按照参数变量名指定对应值，没指定的都用缺省值。不过这实在是太麻烦了，不知道什么情况下才必须用这么可怕的函数，还是祈祷我们不会碰到这样的场景吧！\n",
-    "\n",
-    "当然，只有上面列出的前三个部分的情况还是有的，比如下面的例子："
+    "def say_hi(*names, msg='Hi', punc='!'):\n",
+    "    for name in names:\n",
+    "        print(f'{msg},{name}{punc}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi,Neo.\n",
+      "Hi,Trinity.\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 请在这里输入代码"
+    "say_hi('Neo', 'Trinity', punc='.')"
    ]
   },
   {
