--- a/9-oo-3.ipynb
+++ b/9-oo-3.ipynb
@@ -321,11 +321,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Animal:\n",
+    "\n",
+    "    kind = ''\n",
+    "    def __init__(self,name):\n",
+    "        self.name = name\n",
+    "        \n",
+    "    def voice(self):\n",
+    "        return '...'\n",
+    "    "
    ]
   },
   {
@@ -339,11 +347,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Dog(Animal):\n",
+    "    \n",
+    "    kind = 'canidae'\n",
+    "    \n",
+    "    def voice(self):\n",
+    "        return 'woof-woof'\n",
+    "    \n",
+    "    bark = voice"
    ]
   },
   {
@@ -355,11 +370,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Cat(Animal):\n",
+    "    \n",
+    "    kind = 'felidae'\n",
+    "\n",
+    "    def voice(self):\n",
+    "        return 'meow-meow'\n",
+    "    \n",
+    "    mew = voice"
    ]
   },
   {
@@ -371,20 +393,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "a = Animal('キュゥべえ')\n",
+    "c = Cat('Garfield')\n",
+    "d = Dog('Snoopy')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "キュゥべえ\n",
+      "...\n",
+      "Garfield\n",
+      "meow-meow\n",
+      "Snoopy\n",
+      "woof-woof\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "for animal in [a,c,d]:\n",
+    "    \n",
+    "    print(animal.name)\n",
+    "    print (animal.voice())\n",
+    "    "
    ]
   },
   {
