--- a/p2-4-recursion.ipynb
+++ b/p2-4-recursion.ipynb
@@ -129,11 +129,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "6\n",
+      "24\n",
+      "120\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "result = 1\n",
+    "for i in range(5):\n",
+    "    result = result * (i+1)\n",
+    "    print(result)\n"
    ]
   },
   {
@@ -145,11 +160,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "def f(n):\n",
+    "    if n == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return n * f(n-1)\n",
+    "    \n",
+    "f(5)\n",
+    "    \n",
+    "    "
    ]
   },
   {
