--- a/p2-7-iterable-iterator.ipynb
+++ b/p2-7-iterable-iterator.ipynb
@@ -32,11 +32,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "for t in [1, 2, 3]:\n",
+    "    print(t)"
    ]
   },
   {
@@ -116,29 +127,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "class squares:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.base = 0\n",
+    "        \n",
+    "#     def __iter__(self):\n",
+    "#         return self\n",
+    "    \n",
+    "    def __next__(self):\n",
+    "        self.base += 1\n",
+    "        return self.base * self.base\n",
+    "    \n",
+    "    next = __next__\n",
+    "    \n",
+    "iter = squares()\n",
+    "iter.next()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "400"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "iter.next()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "iter.next()"
    ]
   },
   {
@@ -150,11 +209,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class squares:\n",
+    "    \n",
+    "    def __init__(self, high):\n",
+    "        self.base = 0\n",
+    "        self.high = high\n",
+    "        \n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "    \n",
+    "    def __next__(self):\n",
+    "        if self.high > self.base:\n",
+    "            self.base += 1\n",
+    "        else:\n",
+    "            raise StopIteration\n",
+    "        return self.base * self.base\n",
+    "    \n",
+    "    next = __next__\n",
+    "    \n",
+    "iter = squares(3)"
    ]
   },
   {
@@ -166,11 +243,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "for n in squares(3):\n",
+    "    print(n)\n"
    ]
   },
   {
@@ -191,11 +279,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class fib:\n",
+    "    def __init__(self):\n",
+    "        self.prev = 0\n",
+    "        self.curr = 1\n",
+    "        \n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "    \n",
+    "    def __next__(self):\n",
+    "        self.prev, self.curr = self.curr, self.prev + self.curr\n",
+    "        return self.prev\n",
+    "        "
    ]
   },
   {
@@ -215,11 +314,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n",
+      "55\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "from itertools import islice\n",
+    "\n",
+    "f = fib()\n",
+    "for n in islice(f, 0, 10):\n",
+    "    print(n)"
    ]
   },
   {
@@ -231,11 +351,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['green', 'red', 'yellow', 'green', 'red']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "from itertools import cycle\n",
+    "\n",
+    "colors = cycle(['red', 'yellow', 'green'])\n",
+    "list(islice(colors, 2, 7))\n"
    ]
   },
   {
@@ -261,20 +395,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 2, 3, 5, 8, 13, 21, 34, 55]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "def fib():\n",
+    "    prev, curr = 0, 1\n",
+    "    while True:\n",
+    "        yield curr\n",
+    "        prev, curr = curr, prev + curr\n",
+    "        \n",
+    "f = fib()\n",
+    "list(islice(f, 0, 10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "generator"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "type(f)"
    ]
   },
   {
@@ -325,11 +488,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "from itertools import islice\n",
+    "\n",
+    "class primes:\n",
+    "    def __init__(self):\n",
+    "        self.next = 2\n",
+    "        \n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "    \n",
+    "    def _is_prime(self, n):\n",
+    "        if n in (2, 3):\n",
+    "            return True\n",
+    "                \n",
+    "        for i in range(2, int(n**0.5)+1):\n",
+    "            if n % i == 0:\n",
+    "                return False\n",
+    "                \n",
+    "        return True\n",
+    "    \n",
+    "        \n",
+    "    def __next__(self):\n",
+    "        n = self.next\n",
+    "        while not self._is_prime(n):\n",
+    "            n += 1\n",
+    "            \n",
+    "        self.next = n + 1\n",
+    "        return n\n",
+    "\n",
+    "list(islice(primes(), 0, 10))   "
    ]
   },
   {
@@ -345,16 +547,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'primes' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-38306e130d22>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mislice\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprimes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'primes' object is not iterable"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "def primes():\n",
+    "    base = 2\n",
+    "     if n in (2, 3):\n",
+    "            return True\n",
+    "                \n",
+    "        for i in range(2, int(n**0.5)+1):\n",
+    "            if n % i == 0:\n",
+    "                return False\n",
+    "                \n",
+    "        return True\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
